# compi-acts

./: lista.md
3.2-algoritmodetokenizacion/: instructions.txt  lista.md  patokenizer.py  patokenizer_2026_502.py  patokenizer_colab.ipynb  resultados_pruebas.txt  run_casos.py
3.2-algoritmodetokenizacion/casos-prueba/: custom_test.txt  factorial.txt  lexico_extendido.txt
3.3-tokenizaconply/: README.md  lexer_little_duck.py
3.3-tokenizaconply/casos-prueba/: errores_test.txt  lexico.txt  patoprograma.txt
3.5-decensorecursivo/: README.md  ejemplos_assign.txt  parser_little_duck.py
3.6-parserpredictivo/: README.md  casos_prueba.txt  parser_predictivo_little_duck.py  requirements.txt  resultados_pruebas.txt  run_pruebas.py  test_parser_predictivo.py
3.7-parserlr/: Llittle-Duck-v2.ipynb  README.md  little_duck.py
3.7-parserlr/casos_prueba/: 01_completo_anidado.txt  02_error_lexico.txt
little-duck/v1/: little_duck.py
little-duck/v1/tests/: 03_falta_punto_y_coma.txt  04_error_sintactico_anidado.txt  05_funciones_retorno_tipos.txt  06_resultado_en_expresion.txt  07_llamadas_anidadas.txt  08_recursiva_factorial.txt  09_mezcla_void_no_void.txt  10_error_var_duplicado.txt  11_error_return_sin_punto_y_coma.txt
little-duck/v2/: little_duck.py  prueba-ir.txt
proyecto/: .gitignore
proyecto/frontend/: package.json  pnpm-lock.yaml
proyecto/pipeline/: .gitignore  README.md  pyproject.toml
proyecto/pipeline/src/pipeline/: config.py  db.py  main.py  schema.sql
proyecto/pipeline/src/pipeline/steps/: classify.py  clean.py  ingest.py  llm_keywords.py
(+43 files in other folders)
