[project]
name = "pipeline"
version = "0.1.0"
description = "Excel -> SQLite -> clean -> LLM keywords -> Random Forest classification pipeline"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "openpyxl>=3.1",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.scripts]
pipeline = "pipeline.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]
